css/archive.css
/* MAIN PAGE STYLING (BODY, DIV, IMG, FOOTER) */
body {
	background-color: #d8d3cd;
}
h1 {
	text-align: right;
	font-family: 'general_sanslight', sans-serif;
	font-size: 100px;
	padding: 0;
	padding-right: 35px;
	margin: 0;
}
header {
	display: flex;
	justify-content: space-between;
	flex-direction: row-reverse;
	align-items: center;
}
ul {
	list-style-type: none;
	padding: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	font-family: 'general_sanslight', sans-serif;
	font-size: 20px;
}

li {
	padding: 0px 15px 0px 15px;
}

a {
	text-decoration: none;
	color: black;
}

a:hover {
	color: #f241c3;
	cursor: pointer;
}

.pointer {
	transform: rotate(45deg);
	font-size: 20px;
}
.plabel {
	font-size: 20px;
}
#instruction,
#info {
	font-family: 'general_sanslight', sans-serif;
	font-size: 12px;
	padding: 0px 15px 0px 35px;
}

#mosaic {
	display: flex;
	align-items: center;
	justify-content: center;
}

#mosaicimg {
	display: flex;
	flex-wrap: wrap;
	width: 1366px;
}

.mchild {
	height: 25vh;
	flex-grow: 1;
	padding: 2px;
}

.mchild:last-child {
	flex-grow: 10;
}

.mchild img {
	max-height: 100%;
	min-width: 100%;
	/* object-fit: cover; */
	vertical-align: bottom;
	transition: all 0.5s ease;
}

#overlay {
	position: fixed;
	display: none;
	width: 90%;
	height: 90%;
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 2;
	cursor: pointer;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

#overlay {
	cursor: zoom-out;
}

.mchild img:hover {
	cursor: zoom-in;
}

